fixed navbar part 2. Hopefully no white space is shown when scrolling down :'(

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     background-color: var(--main-bg-color);
     font-family: var(--main-font-family);
 }
